--- a/styles/index.css
+++ b/styles/index.css
@@ -4,13 +4,14 @@
   width: 100%;
   height: 100%;
   background: #F6F2F2;
+  margin-bottom: 100px;
 }
 
 .page {
   display: flex;
   align-items: center;
   flex-direction: column;
-  justify-content: center;
+  flex-wrap: wrap;
   width: 100%;
   height: 688px;
 }
@@ -82,6 +83,7 @@
 .container__main__text {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
 }
 
 .heading {
@@ -92,20 +94,20 @@
   color: #000000;
   letter-spacing: 1.5px;
   text-transform: uppercase;
-  width: 618px;
-  height: 117px;
+  max-width: 548px;
+  height: 132px;
   padding: 0;
   margin: 0;
 }
 
 .main__text {
   font-family: 'Open Sans';
-  font-size: 18px;
+  font-size: 16px;
   line-height: 28px;
-  width: 544px;
-  height: 73px;
+  width: 548px;
+  max-height: 80px;
   color: #000000;
-  margin: 36px 0 0 0;
+  margin-top: 36px;
 }
 
 .container__button {
@@ -128,4 +130,98 @@
 
 .container__button:hover {
   opacity: .7;
+}
+
+.container2 {
+  display: flex;
+  justify-content: flex-start;
+  max-width: 1580px;
+  flex-wrap: wrap;
+  height: auto;
+  background: #FFFFFF;
+  margin: 0 auto;
+}
+
+.container2__first {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: stretch;
+  max-width: 1252px;
+  width: 100%;
+  height: 590px;
+  margin: 0 auto;
+}
+
+.heading__second {
+  font-family: 'Open Sans';
+  font-weight: 800;
+  font-size: 42px;
+  line-height: 56px;
+  max-width: 522px;
+  width: 100%;
+  height: 86px;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  margin: 108px 118px 50px 0;
+  color: #000000;
+}
+
+.container2__text {
+  font-family: 'Open Sans';
+  font-size: 16px;
+  line-height: 28px;
+  width: 539px;
+  height: 98px;
+  color: #000000;
+}
+
+.container2__button {
+  box-sizing: border-box;
+  font-family: 'Open Sans';
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 34px;
+  letter-spacing: 0.3px;
+  width: 227px;
+  height: 55px;
+  border: 2px solid #FF0000;
+  border-radius: 5px;
+  color: #FF2D2D;
+  margin-top: 78px;
+}
+
+.container2__column {
+  display: flex;
+  flex-direction: column;
+}
+
+.png {
+  width: 37px;
+  height: 37px;
+}
+
+.container2__common {
+  margin-top: 108px;
+  width: 285px;
+  height: 514px;
+}
+
+.container2__third {
+  font-family: 'Open Sans';
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 0px;
+  letter-spacing: 0.2px;
+  color: #000000;
+  width: 184px;
+  margin: 32px 0 5px 0;
+}
+
+.container2__third__text {
+  font-family: 'Open Sans';
+  font-size: 16px;
+  line-height: 28px;
+  color: #000000;
+  width: 280px;
+  margin-bottom: 50px;
 }
