--- a/styles/index.css
+++ b/styles/index.css
@@ -3,7 +3,7 @@
 .root {
   width: 100%;
   height: 100%;
-  background: #F6F2F2;
+  background: #FFFFFF;
   margin-bottom: 100px;
 }
 
@@ -14,6 +14,7 @@
   flex-wrap: wrap;
   width: 100%;
   height: 688px;
+  background: #F6F2F2;
 }
 
 .header {
@@ -49,7 +50,7 @@
   display: flex;
   align-items: center;
   font-family: 'Open Sans';
-  font-weight: 700;
+  font-weight: 800;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.49px;
@@ -73,6 +74,7 @@
   width: calc(100% - 330px);
   height: 360px;
   max-width: 1254px;
+
 }
 
 .content__video {
@@ -141,7 +143,6 @@
   margin: 30px 165px 102px 165px;
   width: calc(100% - 330px);
   background: #FFFFFF;
-  margin: 108px auto 0 auto;
 }
 
 .second__column {
@@ -237,12 +238,11 @@
 .third__section {
   display: flex;
   flex-direction: column;
-  padding-top: 220px;
-  margin: 0 165px 0 165px;
-  width: calc(100% - 330px);
+  margin: 0 auto;
+  padding-top: 60px;
+  width: 1432px;
   height: 930px;
   background: #FFFFFF;
-
 }
 
 .third__heading {
@@ -263,8 +263,50 @@
   line-height: 28px;
   width: 536.85px;
   height: 45px;
-  height: 536px;
   text-align: center;
   color: #000000;
   margin: 28px auto 107px auto;
+}
+
+.third__list {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 0 auto;
+  list-style-type: none;
+  width: 922px;
+  height: 24px;
+}
+
+.third__link {
+  font-family: 'Open Sans';
+  font-weight: 700;
+  font-size: 22px;
+  line-height: 24px;
+  letter-spacing: 0.2px;
+  text-transform: uppercase;
+  color: #000000;
+  text-decoration: none;
+}
+
+.third__link:hover {
+  color: #FF2D2D;
+}
+
+.third__section__product {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 1432px;
+  height: 664px;
+  margin-top: 30px;
+}
+
+.image {
+  display: flex;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  margin-right: 20px;
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
 }
