--- a/styles/index.css
+++ b/styles/index.css
@@ -213,7 +213,6 @@
   height: 514px;
 }
 
-
 .second__heading text {
   font-family: 'Open Sans';
   font-weight: 700;
@@ -265,7 +264,16 @@
   height: 45px;
   text-align: center;
   color: #000000;
-  margin: 28px auto 107px auto;
+  margin: 28px auto 34px auto;
+}
+
+.line {
+  width: 134px;
+  height: 4px;
+  background-color: #FF2D2D;
+  margin: 0 auto;
+  border-radius: 4px;
+  margin-bottom: 86px;
 }
 
 .third__list {
