--- a/styles/index.css
+++ b/styles/index.css
@@ -107,8 +107,8 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 28px;
-  width: 548px;
-  max-height: 80px;
+  max-width: 548px;
+  height: 80px;
   color: #000000;
   margin-top: 36px;
 }
@@ -117,7 +117,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 227px;
+  max-width: 227px;
   height: 55px;
   background: #FF2D2D;
   border-radius: 5px;
@@ -153,7 +153,7 @@
 
 .second__content {
   display: flex;
-  width: 1252px;
+  max-width: 1252px;
   height: 588px;
   background: #FFFFFF;
   padding-top: 100px;
@@ -164,7 +164,7 @@
   font-weight: 800;
   font-size: 42px;
   line-height: 56px;
-  width: 523px;
+  max-width: 523px;
   letter-spacing: 0.4px;
   text-transform: uppercase;
   margin: 0;
@@ -176,7 +176,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 28px;
-  width: 539px;
+  max-width: 539px;
   height: 98px;
   color: #000000;
   margin-top: 50px;
