--- a/styles/index.css
+++ b/styles/index.css
@@ -238,8 +238,10 @@
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  margin: 30px 165px 102px 165px;
+  width: calc(100% - 330px);
+  align-items: center;
   padding-top: 60px;
-  width: 1432px;
   height: 930px;
   background: #FFFFFF;
 }
@@ -283,6 +285,7 @@
   list-style-type: none;
   width: 922px;
   height: 24px;
+  margin-bottom: 30px;
 }
 
 .third__link {
@@ -304,9 +307,10 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  width: 1432px;
+  max-width: 1432px;
   height: 664px;
   margin-top: 30px;
+  margin: 0 auto;
 }
 
 .image {
