--- a/styles/index.css
+++ b/styles/index.css
@@ -1,19 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 .root {
-  width: 100%;
-  height: 100%;
-  background: #F6F2F2;
-  margin-bottom: 100px;
-}
-
-.page {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 688px;
+  margin-bottom: 500px;
   background: #F6F2F2;
 }
 
@@ -68,25 +56,25 @@
 
 .content {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 0 165px;
+  justify-content: center;
+  margin: 0 165px 0 165px;
   width: calc(100% - 330px);
-  height: 360px;
-  max-width: 1254px;
-
+  gap: 82px;
+  background: #F6F2F2;
 }
 
 .content__video {
   width: 551px;
   height: 356px;
-  margin: 0;
+  margin-bottom: 220px;
 }
 
 .content__main__text {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  max-width: 1252px;
+  min-height: 358px;
 }
 
 .heading {
@@ -95,9 +83,9 @@
   font-size: 60px;
   line-height: 72px;
   color: #000000;
-  letter-spacing: 1.5px;
+  letter-spacing: 4px;
   text-transform: uppercase;
-  max-width: 548px;
+  max-width: 546px;
   padding: 0;
   margin: 0;
 }
@@ -107,10 +95,9 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 28px;
-  max-width: 548px;
-  height: 80px;
+  max-width: 540px;
   color: #000000;
-  margin-top: 36px;
+  margin-top: 30px;
 }
 
 .content__button {
@@ -128,7 +115,8 @@
   color: #FFFFFF;
   letter-spacing: 0.4px;
   transition: .3s;
-  margin-top: 78px;
+  margin-top: 30px;
+  margin-bottom: 220px;
 }
 
 .content__button:hover {
@@ -140,7 +128,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 30px 165px 102px 165px;
+  margin: 0 165px 0 165px;
   width: calc(100% - 330px);
   background: #FFFFFF;
 }
@@ -162,8 +150,8 @@
 .second__heading {
   font-family: 'Open Sans';
   font-weight: 800;
-  font-size: 42px;
-  line-height: 56px;
+  font-size: 40px;
+  line-height: 54px;
   max-width: 523px;
   letter-spacing: 0.4px;
   text-transform: uppercase;
@@ -237,8 +225,8 @@
 .third__section {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
-  margin: 30px 165px 102px 165px;
+  justify-content: center;
+  margin: 0 165px 0 165px;
   width: calc(100% - 330px);
   align-items: center;
   padding-top: 60px;
@@ -253,8 +241,8 @@
   line-height: 0px;
   letter-spacing: 0.4px;
   text-transform: uppercase;
-  margin: 0 auto;
-  color: #000000
+  margin-top: 140px;
+  color: #000000;
 }
 
 .third__text {
@@ -297,6 +285,7 @@
   text-transform: uppercase;
   color: #000000;
   text-decoration: none;
+  margin: 0 auto;
 }
 
 .third__link:hover {
@@ -305,20 +294,201 @@
 
 .third__section__product {
   display: flex;
+  align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 1432px;
-  height: 664px;
-  margin-top: 30px;
-  margin: 0 auto;
+  width: 1080px;
+  height: 520px;
+  margin-bottom: 150px;
 }
 
 .image {
+  width: 240px;
+  height: 240px;
+  margin: 5px;
+  object-fit: cover;
+}
+
+.image:hover {
+  cursor: pointer;
+  height: 245px;
+}
+
+.section__four {
+  margin: 0 165px 0 165px;
+  width: calc(100% - 330px);
+  background: #FFFFFF;
+  padding-top: 40px;
+  padding-bottom: 20px;
+}
+
+.four__left {
+  width: 100%;
+  text-align: left;
+  margin-bottom: 60px;
+}
+
+.four__heading {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  letter-spacing: 0.2px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  color: #000000;
+}
+
+.four__text {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  margin: 0;
+  margin-bottom: 30px;
+  max-width: 460px;
+  color: #000000;
+}
+
+.four__line {
+  width: 134px;
+  height: 4px;
+  background-color: #FF2D2D;
+  margin-left: 0px;
+  margin-top: 34px;
+  border-radius: 2px;
+
+}
+
+.four__box {
+  width: 100%;
   display: flex;
   margin: 0 auto;
   flex-wrap: wrap;
-  margin-right: 20px;
+  align-items: stretch;
+  min-height: 462px;
+}
+
+.four__right {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.four__info__right {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-self: start;
+  justify-content: space-between;
+  max-width: 662px;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+
+.four__chief__name {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 600;
+  font-size: 30.127px;
+  line-height: 0px;
+  letter-spacing: 0.3px;
+  text-transform: uppercase;
+  color: #000000;
+
+}
+
+.four__text__right {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15.4px;
+  line-height: 28px;
+  margin-top: 32px;
+  color: #000000;
+  width: 634px;
+}
+
+.four__photo__chief {
+  flex-shrink: 0;
+  height: 440px;
   width: 300px;
-  height: 300px;
+  margin-right: 60px;
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+  align-self: start;
   object-fit: cover;
+}
+
+@supports (display: grid; ) and (display: contents; ) {
+  .four__box {
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(2, auto);
+  }
+
+  .four__right {
+    display: contents;
+  }
+}
+
+.four__photo__worker {
+  display: flex;
+  height: 200px;
+  width: 150px;
+  object-fit: cover;
+}
+
+.four__link {
+  font-family: 'Open Sans';
+  font-style: italic;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0.9px;
+  color: #000000;
+  text-decoration: none;
+  margin-right: 30px;
+}
+
+.four__link:hover {
+  text-decoration: underline;
+}
+
+.four__photos {
+  display: flex;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+.four__photo {
+  position: relative;
+  margin-top: 34px;
+}
+
+.four__photo:not(:last-child) {
+  margin-right: 18px;
+}
+
+.four__worker__name {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  visibility: hidden;
+  color: #FFFFFF;
+  position: absolute;
+  bottom: 0;
+  margin: 0;
+  height: 38px;
+  background-color: #000000;
+  opacity: 0.5;
+}
+
+.four__photo:hover>.four__worker__name {
+  visibility: visible;
 }
