--- a/styles/index.css
+++ b/styles/index.css
@@ -10,8 +10,8 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 30px 165px 102px 165px;
-  width: calc(100% - 330px);
+  margin: 30px 150px 102px 150px;
+  width: calc(100% - 300px);
   min-height: 88px;
   background: #000000;
   opacity: 0.8;
@@ -57,14 +57,14 @@
 .content {
   display: flex;
   justify-content: center;
-  margin: 0 165px 0 165px;
-  width: calc(100% - 330px);
-  gap: 82px;
+  margin: 0 150px 0 150px;
+  width: calc(100% - 300px);
+  gap: 60px;
   background: #F6F2F2;
 }
 
 .content__video {
-  width: 551px;
+  width: 541px;
   height: 356px;
   margin-bottom: 220px;
 }
@@ -83,9 +83,9 @@
   font-size: 60px;
   line-height: 72px;
   color: #000000;
-  letter-spacing: 4px;
+  letter-spacing: 1px;
   text-transform: uppercase;
-  max-width: 546px;
+  max-width: 514px;
   padding: 0;
   margin: 0;
 }
@@ -128,8 +128,8 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 0 165px 0 165px;
-  width: calc(100% - 330px);
+  margin: 0 150px 0 150px;
+  width: calc(100% - 300px);
   background: #FFFFFF;
 }
 
@@ -226,12 +226,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0 165px 0 165px;
-  width: calc(100% - 330px);
+  margin: 0 150px 0 150px;
+  width: calc(100% - 300px);
   align-items: center;
   padding-top: 60px;
   height: 930px;
   background: #FFFFFF;
+  padding-top: 140px;
 }
 
 .third__heading {
@@ -241,7 +242,7 @@
   line-height: 0px;
   letter-spacing: 0.4px;
   text-transform: uppercase;
-  margin-top: 140px;
+
   color: #000000;
 }
 
@@ -254,16 +255,16 @@
   height: 45px;
   text-align: center;
   color: #000000;
-  margin: 28px auto 34px auto;
+  margin: 28px auto 0 auto;
 }
 
 .line {
   width: 134px;
   height: 4px;
-  background-color: #FF2D2D;
-  margin: 0 auto;
+  background-color: #FF0000;
   border-radius: 4px;
-  margin-bottom: 86px;
+  margin-top: 34px;
+  margin-bottom: 36px;
 }
 
 .third__list {
@@ -274,6 +275,7 @@
   width: 922px;
   height: 24px;
   margin-bottom: 30px;
+
 }
 
 .third__link {
@@ -315,14 +317,18 @@
 }
 
 .section__four {
-  margin: 0 165px 0 165px;
-  width: calc(100% - 330px);
+  margin: 0 auto;
+  margin: 0 150px 0 150px;
+  width: calc(100% - 300px);
   background: #FFFFFF;
   padding-top: 40px;
   padding-bottom: 20px;
 }
 
 .four__container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   max-width: 1022px;
 }
 
@@ -418,7 +424,7 @@
   flex-shrink: 0;
   height: 462px;
   width: 300px;
-  margin-right: 60px;
+
   grid-column: 1 / 2;
   grid-row: 1 / 3;
   align-self: start;
@@ -439,8 +445,8 @@
 
 .four__photo__worker {
   display: flex;
-  height: 200px;
-  width: 150px;
+  height: 260px;
+  width: 160px;
   object-fit: cover;
 }
 
@@ -453,7 +459,7 @@
   letter-spacing: 0.9px;
   color: #000000;
   text-decoration: none;
-  margin-top: 30px;
+  margin-top: 100px;
   margin-right: 30px;
 }
 
@@ -475,7 +481,8 @@
 }
 
 .four__photo:not(:last-child) {
-  margin-right: 18px;
+
+  margin-right: 16px;
 }
 
 .four__worker__name {
@@ -488,6 +495,7 @@
   position: absolute;
   bottom: 0;
   margin: 0 auto;
+  width: 160px;
   height: 38px;
   background-color: #000000;
   opacity: 0.5;
