--- a/styles/index.css
+++ b/styles/index.css
@@ -470,6 +470,7 @@
   flex-wrap: wrap;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  cursor: pointer;
 }
 
 .four__photo {
@@ -554,7 +555,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 24px;
   letter-spacing: 0.4px;
   display: flex;
@@ -572,7 +573,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  font-size: 18px;
+  font-size: 16x;
   line-height: 34px;
   display: flex;
   align-items: center;
@@ -586,6 +587,7 @@
   border: none;
   border-radius: 5px;
   margin-left: 20px;
+  cursor: pointer;
   transition: 0.3s;
   margin-top: 30px;
 }
