--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,12 @@
 
 .root {
   margin-bottom: 100px;
+  background: #FFFFFF;
+}
+
+.home__content {
   background: #F6F2F2;
+  padding-top: 30px;
 }
 
 .header {
@@ -10,7 +15,7 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 30px 140px 102px 140px;
+  margin: 0 140px 102px 140px;
   width: calc(100% - 280px);
   min-height: 88px;
   background: #000000;
@@ -230,10 +235,10 @@
   margin: 0 140px 0 140px;
   width: calc(100% - 280px);
   align-items: center;
-  padding-top: 60px;
   height: 930px;
   background: #FFFFFF;
   padding-top: 140px;
+  padding-bottom: 140px;
 }
 
 .third__heading {
@@ -299,20 +304,19 @@
   justify-content: center;
   flex-wrap: wrap;
   width: 1080px;
-  height: 520px;
-  margin-bottom: 150px;
+  height: 550px;
 }
 
 .image {
   width: 240px;
   height: 240px;
-  margin: 5px;
+  margin: 10px;
   object-fit: cover;
 }
 
 .image:hover {
   cursor: pointer;
-  height: 245px;
+  transform: scale(1.2);
 }
 
 .section__four {
@@ -394,7 +398,6 @@
   grid-row: 1 / 2;
 }
 
-
 .four__chief__name {
   font-family: 'Open Sans';
   font-style: italic;
@@ -404,7 +407,6 @@
   letter-spacing: 0.3px;
   text-transform: uppercase;
   color: #000000;
-
 }
 
 .four__text__right {
@@ -447,6 +449,13 @@
   object-fit: cover;
 }
 
+.four__list {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  list-style-type: none;
+}
+
 .four__link {
   font-family: 'Open Sans';
   font-style: italic;
@@ -457,7 +466,6 @@
   color: #000000;
   text-decoration: none;
   margin-top: 100px;
-  margin-right: 30px;
 }
 
 .four__link:hover {
@@ -471,6 +479,7 @@
   grid-column: 2 / 3;
   grid-row: 2 / 3;
   cursor: pointer;
+  list-style-type: none;
 }
 
 .four__photo {
