--- a/styles/index.css
+++ b/styles/index.css
@@ -582,7 +582,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  font-size: 16x;
+  font-size: 16px;
   line-height: 34px;
   display: flex;
   align-items: center;
