--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 .root {
-  margin-bottom: 100px;
+  margin-bottom: 500px;
   background: #FFFFFF;
 }
 
@@ -608,6 +608,172 @@
   opacity: 0.7;
 }
 
+.six {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  padding-left: 125px;
+  padding-top: 70px;
+  margin: 0 auto;
+}
+
+.six__heading {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 24px;
+  letter-spacing: 0.4px;
+  text-transform: uppercase;
+  color: #000000;
+  max-width: 328px;
+  margin-bottom: 45px;
+}
+
+.six__text {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  color: #000000;
+  max-width: 752px;
+}
+
+.six__line {
+  width: 134px;
+  height: 4px;
+  background-color: #FF2D2D;
+  margin-top: 58px;
+  margin-bottom: 74px;
+  border-radius: 2px;
+}
+
+.six__box__left {
+  max-width: 690px;
+  margin-top: 72px;
+}
+
+.six__form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  gap: 48px;
+}
+
+.six__input {
+  font-family: 'Open Sans';
+  display: flex;
+  box-sizing: border-box;
+  background-color: #bdbdb8f3;
+  padding: 25px 66px 25px 44px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  line-height: 28px;
+}
+
+.six__textarea {
+  font-family: 'Open Sans';
+  box-sizing: border-box;
+  background-color: #bdbdb8f3;
+  border: none;
+  border-radius: 5px;
+  padding-left: 52px;
+  padding-top: 32px;
+  width: 678px;
+  height: 190px;
+  resize: none;
+}
+
+.six__button {
+  Font-family: 'Open Sans';
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 38px;
+  color: #FFFFFF;
+  height: 74px;
+  width: 678px;
+  background: #FF3B3B;
+  border: none;
+  margin-bottom: 100px;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.six__button:hover {
+  opacity: .7;
+}
+
+.six__box__right {
+  display: flex;
+  align-items: end;
+  width: 560px;
+  height: 440px;
+  background: #2D2D2D;
+  margin-top: 298px;
+  margin-left: 30px;
+  position: relative;
+}
+
+.six__right__heading {
+  font-family: 'Open Sans';
+  box-sizing: border-box;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 34px;
+  color: #FFFFFF;
+  white-space: nowrap;
+  width: 315px;
+  letter-spacing: 0.4px;
+  text-transform: uppercase;
+  position: absolute;
+  padding: 120px 310px 310px 80px;
+}
+
+.six__right__text {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  color: #FFFFFF;
+  width: 318px;
+  height: 45px;
+  position: absolute;
+  padding: 166px 184px 244px 80px;
+}
+
+.right__text {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  color: #FFFFFF;
+  width: 221px;
+  height: 45px;
+  position: absolute;
+  padding: 268px 276px 176px 80px;
+}
+
+.six__number {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  color: #FFFFFF;
+  width: 179px;
+  position: absolute;
+  padding: 316px 313px 150px 80px;
+}
+
+
+
+
 /* медиа 1 секция */
 
 @media screen and (max-width: 1365px) {
@@ -849,4 +1015,4 @@
   }
 }
 
-/* ьедиа 2 секция */
+/* медиа 2 секция */
