--- a/styles/index.css
+++ b/styles/index.css
@@ -709,11 +709,11 @@
 .six__box__right {
   display: flex;
   align-items: end;
-  width: 560px;
-  height: 440px;
+  width: 580px;
+  height: 448px;
   background: #2D2D2D;
   margin-top: 298px;
-  margin-left: 30px;
+  margin-left: 104px;
   position: relative;
 }
 
@@ -771,8 +771,51 @@
   padding: 316px 313px 150px 80px;
 }
 
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1586px;
+  width: 100%;
+  min-height: 113px;
+  background: #313030;
+}
 
+.footer__box {
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-between;
+  margin: 0 140px 0 140px;
+  width: calc(100% - 280px);
+  min-height: 113px;
+}
 
+.footer__text {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  color: #B8B8B8;
+  padding-top: 40px;
+}
+
+.footer__links {
+  padding-top: 40px;
+  width: 476px;
+  margin-right: 160px;
+}
+
+.footer__link {
+  margin-right: 18px;
+}
+
+.footer__communis {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 1336px;
+}
 
 /* медиа 1 секция */
 
