--- a/styles/index.css
+++ b/styles/index.css
@@ -801,9 +801,11 @@
 }
 
 .footer__links {
+  display: flex;
   padding-top: 40px;
   width: 476px;
   margin-right: 140px;
+  list-style-type: none;
 }
 
 .footer__link {
