--- a/styles/index.css
+++ b/styles/index.css
@@ -99,6 +99,10 @@
   margin: 0;
 }
 
+.burger__popup {
+  display: none;
+}
+
 .main__text {
   font-family: 'Open Sans';
   font-weight: 500;
@@ -1013,6 +1017,118 @@
     border: 1px solid #000000;
   }
 
+  .header__link {
+    display: none;
+  }
+
+  .header__list {
+    display: none;
+  }
+
+  /* бургер */
+
+  .burger {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 1;
+    gap: 4px;
+    margin-top: 6px;
+    position: fixed;
+    cursor: pointer;
+    transition: .3s;
+  }
+
+  .burger:hover {
+    opacity: .6;
+  }
+
+  .burger__line__first {
+    width: 36px;
+    height: 5px;
+    border-radius: 2px;
+    background-color: #FF2D2D;
+    transition: 0.3s;
+  }
+
+  .line_first_opened {
+    transform: rotate(-45deg) translate(-5px, 5px);
+  }
+
+  .burger__line__second {
+    width: 36px;
+    height: 5px;
+    border-radius: 2px;
+    background-color: #FF2D2D;
+    transition: 0.3s;
+  }
+
+  .line_second_opened {
+    opacity: 0;
+  }
+
+  .burger__line__thir {
+    width: 36px;
+    height: 5px;
+    border-radius: 2px;
+    background-color: #FF2D2D;
+    transition: 0.3s;
+  }
+
+  .line_thir_opened {
+    transform: rotate(45deg) translate(-8px, -8px);
+  }
+
+  .burger__popup {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: #9b9b9b;
+    width: 200px;
+    height: 420px;
+    border-radius: 8px;
+    transform: translateY(-400px);
+    transition: .3s;
+  }
+
+  .burger__popup__opened {
+    transform: translateY(0);
+  }
+
+  .header__list__burger {
+    margin-top: 250px;
+    padding: 0;
+  }
+
+  .list__text__burger {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .link__text__burger {
+    display: flex;
+    align-items: center;
+    font-family: 'Open Sans';
+    font-weight: 800;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.49px;
+    text-transform: uppercase;
+    color: black;
+    padding: 10px 0 10px 0;
+    text-decoration: none;
+    transition: .3s;
+  }
+
+  .link__text__burger:hover {
+    background: #FF3F40;
+    border-radius: 3px;
+    height: 100%;
+  }
+
   .one {
     display: flex;
     justify-content: center;
@@ -1033,7 +1149,7 @@
 
   .heading {
     font-family: 'Open Sans';
-    font-weight: 700;
+    font-weight: 800;
     font-size: 34px;
     line-height: 48px;
     text-align: center;
