--- a/styles/index.css
+++ b/styles/index.css
@@ -687,7 +687,7 @@
 .six__form {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   gap: 48px;
 }
 
@@ -711,7 +711,7 @@
   border-radius: 5px;
   padding-left: 52px;
   padding-top: 32px;
-  width: 678px;
+  width: 100%;
   height: 190px;
   resize: none;
 }
@@ -723,7 +723,7 @@
   line-height: 38px;
   color: #FFFFFF;
   height: 74px;
-  width: 678px;
+  width: 734px;
   background: #FF3B3B;
   border: none;
   margin-bottom: 100px;
@@ -806,7 +806,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 1586px;
   width: 100%;
   min-height: 113px;
   background: #313030;
@@ -816,8 +815,8 @@
   display: flex;
   margin: 0 auto;
   justify-content: space-between;
-  margin: 0 140px 0 140px;
-  width: calc(100% - 280px);
+  margin: 0 100px 0 100px;
+  width: calc(100% - 200px);
   min-height: 113px;
 }
 
@@ -839,7 +838,7 @@
 }
 
 .footer__link {
-  margin-right: 18px;
+  margin-right: 10px;
 }
 
 .footer__igp {
@@ -851,7 +850,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 1336px;
+  width: 1440px;
 }
 
 /* медиа 1 секция */
